Migrated db using liquibase

--- a/event_management/pom.xml
+++ b/event_management/pom.xml
@@ -87,6 +87,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+		</dependency>
+
     </dependencies>
 
 	<build>
