--- a/event_management/src/main/resources/liquibase.properties
+++ b/event_management/src/main/resources/liquibase.properties
@@ -1,4 +1,4 @@
-url=${jdbc:mysql://localhost:3306/event_management}
+url=${jdbc:mysql://localhost:3306/event-management-database}
 username=${root}
-password=${dummypassword}
+password=${adminGaj}
 changeLogFile=src/main/resources/Sql/changelog-master.xml
